--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
+    "vue": "2.6.14",
+    "vue-loader": "15.9.7",
+    "vue-template-compiler": "2.6.14",
+    "vue-turbolinks": "^2.2.2",
+    "vuetify": "^2.6.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
